--- a/css/main.css
+++ b/css/main.css
@@ -241,7 +241,7 @@ main#home h1 {
 .about-info .bio {
     grid-area: bio;
     font-size: 1rem;
-    color: #c5c6c7;
+    color: #0b0c10;
 }
 
 .about-info .job-1 {
